fixed container going off screen

--- a/src/ProfileContainer.css
+++ b/src/ProfileContainer.css
@@ -1,8 +1,9 @@
 div.container {
   overflow-y: scroll;
   overflow-x: hidden;
+  border: 1px solid rgba(69, 69, 69, 0.05);
   border-radius: 5px;
-  height: 75vw;
+  height: 45vw;
   width: 50vw;
   margin-top: 5vw;
   margin-left: auto;
